css overflow fix

--- a/QWest.Web/public/login.css
+++ b/QWest.Web/public/login.css
@@ -8,6 +8,10 @@ h1 {
     
 }
 
+.cover-container {
+    overflow-y: scroll;
+}
+
 #login_button,
 #email_input,
 #password_input {
