--- a/QWest.Web/public/settings.css
+++ b/QWest.Web/public/settings.css
@@ -81,6 +81,7 @@ body {
     flex: 1;
     min-height: 100%;
     align-items: stretch;
+    overflow-y: scroll;
 }
 
 .lead {
